# NOVA-Electric-Racing

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Makefile  Nova.ioc  README.md  app.overlay  compile_commands.json  prj.conf
Core/Inc/: can.h  inverter.h  inverter_broadcast.h  inverter_command.h  pre_charge.h  stm32f7xx_it.h
Core/Src/: can.c  eth.c  gpio.c  inverter_broadcast.c  inverter_command.c  main.c  pre_charge.c  stm32f7xx_it.c  tim.c
include/: can_controller.hpp  can_utility.hpp  inverter_broadcast.hpp  inverter_broadcast_parse.hpp  inverter_command.hpp  peripheral_controller.hpp  pre_charge.hpp  relay_controller.hpp
src/: can_controller.cpp  can_utility.cpp  inverter_broadcast.cpp  inverter_broadcast_parse.cpp  inverter_command.cpp  main.cpp  peripheral_controller.cpp  pre_charge.cpp  relay_controller.cpp
